--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -11,7 +11,6 @@
 
 <div class="container">
   <h2>Create new post</h2>
-  <a href="/"><button type="submit">See all posts</button></a>
 	<form method="post" role="form">
 
     <div class="form-group">
@@ -20,12 +19,12 @@
     </div>
     <div class="form-group">
       <label for="blog">Blog:</label>
-      <textarea type="text" class="form-control" id="blog" placeholder="Enter details here..." name="blog">
-
-      </textarea>
+      <textarea rows="20" type="text" class="form-control" id="blog" placeholder="Enter details here..." name="blog"></textarea>
     </div>
     <button class="btn btn-default" type="submit">Submit</button>
 	</form>
+  <br>
+    <a href="/"><button type="submit">See all posts</button></a>
 </div>
 </body>
 </html>
