--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -15,11 +15,13 @@
 
     <div class="form-group">
     <label for="title">Title:</label>
-    <input type="text" class="form-control" id="title" placeholder="Enter title" name="title">
+    <input type="text" class="form-control" id="title" placeholder="Enter title..." name="title">
+      <label style="color:red;">{{title_error}}</label>
     </div>
     <div class="form-group">
       <label for="blog">Blog:</label>
-      <textarea rows="20" type="text" class="form-control" id="blog" placeholder="Enter details here..." name="blog"></textarea>
+      <textarea rows="20" type="text" class="form-control" id="blog" placeholder="Enter post..." name="blog"></textarea>
+      <label style="color:red;">{{post_error}}</label>
     </div>
     <button class="btn btn-default" type="submit">Submit</button>
 	</form>
