--- a/app/templates/permalink.html
+++ b/app/templates/permalink.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
+{% extends "main.html" %}
+{% block content %}
 
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-</head>
-<body>
-
-<div class="container">
+  <div class="jumbotron">
+    <h2 align="center">New Post</h2>
+    </div>
 
     <div class="panel panel-default">
       <div class="panel-heading"><b>{{post.title}}</b>
@@ -19,5 +13,4 @@
     <br>
     <a href="/"><button type="submit">See all posts</button></a>
 </div>
-</body>
-</html>
+{% endblock %}
