--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,10 +6,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="static/css/styles.css">
+
 </head>
 <body>
-
-<div class="container">
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <h2 align="center" style="font-size: 60px;margin-top: 50px;">Blogs</h2>
+    </div>
+<div class="container" data-spy="scroll" data-target="scroll" data-offset="50">
   {% block content %}
   {% endblock %}
 </div>
