--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 
+<div class="container-fluid">
     <h2 align="center">Create new post</h2>
 	<form method="post" role="form">
 
@@ -10,7 +11,7 @@
       <label style="color:red;">{{title_error}}</label>
     </div>
     <div class="form-group">
-      <label for="blog">Blog:</label>
+      <label for="blog">Subject:</label>
       <textarea rows="13" type="text" class="form-control" id="blog" placeholder="Enter post..." name="blog"></textarea>
       <label style="color:red;">{{post_error}}</label>
     </div>
