--- a/app/templates/permalink.html
+++ b/app/templates/permalink.html
@@ -1,14 +1,13 @@
 {% extends "main.html" %}
 {% block content %}
 
-    <h2 align="center">New Post</h2>
-
-    <div class="panel panel-default">
-      <div class="panel-heading"><b>{{post.title}}</b>
-      </div>
-      <div class="panel-body">{{post.blog}}</div>
-    </div>
+<div class="container-fluid">
+          <h2>{{blog.title}}</h2>
+          <hr>
+          <p>{{blog.blog}}</p>
+          <div class="text-right"><i>{{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</i></div>
     <br>
     <a href="/"><button type="submit" class="btn btn-primary">See all posts</button></a>
 </div>
+
 {% endblock %}
