--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="navbar navbar-inverse navbar-fixed-top">
-    <h2 align="center" style="font-size: 60px;margin-top: 50px;">Blogs</h2>
+    <h2 align="center" style="font-size: 60px;margin-top: 50px;">Back of a Length</h2>
     </div>
 <div class="container" data-spy="scroll" data-target="scroll" data-offset="50">
   {% block content %}
