--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,34 +1,21 @@
 {% extends "main.html" %}
 {% block content %}
-
-
   {% if blogs %}
-  <div id="scroll">
-  <a href="/newpost"><button type="submit" class="btn btn-primary">Add new post</button></a>
-  <br>
-  <br>
-    <!--{% for blog in blogs %}-->
-    <!--<div class="panel panel-default" id="section1">-->
-      <!--<div class="panel-heading"><b>{{blog.title}}</b>-->
-        <!--<div class="text-right">{{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</div>-->
-      <!--</div>-->
-      <!--<div class="panel-body">{{blog.blog}}</div>-->
-    <!--</div>-->
-    <!--{% endfor %}-->
+      <h4><small>RECENT POSTS</small></h4>
+      <hr>
+      {% for blog in blogs %}
+      <div class="well">
+        <h2>{{blog.title}}</h2>
+        <hr>
+        <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, {{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</h5>
+        <h5><span class="label label-danger"></span><span class="label label-primary"></span></h5><br>
+        <p>{{blog.blog}}</p>
+        <br><br>
+         </div>
+      {% endfor %}
+    {% else %}
+      <h2>No blogs to display</h2>
+      <a href="/newpost"><button type="submit" class="btn btn-primary">Add new post</button></a>
+    {% endif %}
 
-    {% for blog in blogs %}
-        <div class="container-fluid">
-          <h2>{{blog.title}}</h2>
-          <hr>
-          <p>{{blog.blog}}</p>
-          <div class="text-right"><i>{{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</i></div>
-        </div>
-    {% endfor %}
-
-
-  {% else %}
-    <h2>No blogs to display</h2>
-    <a href="/newpost"><button type="submit" class="btn btn-primary">Add new post</button></a>
-  {% endif %}
-</div>
 {% endblock %}
