--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -2,20 +2,45 @@
 
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-      <link rel="stylesheet" href="static/css/styles.css">
-
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="static/css/styles.css">
+  <script src="static/js/script.js"></script>
 </head>
 <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <h2 align="center" style="font-size: 60px;margin-top: 50px;">Back of a Length</h2>
+  <div class="container-fluid">
+  <div class="row content">
+    <div class="col-sm-3 sidenav">
+      <h4>Back of a Length</h4>
+      <ul class="nav nav-pills nav-stacked">
+        <li class="active"><a href="/">All posts</a></li>
+        <li><a href="/blog/signup">Signup</a></li>
+        <li><a href="/newpost">Add new post</a></li>
+      </ul><br>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search Blog..">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search"></span>
+          </button>
+        </span>
+      </div>
     </div>
-<div class="container" data-spy="scroll" data-target="scroll" data-offset="50">
+
+    <div class="col-sm-9">
   {% block content %}
+
   {% endblock %}
+
+    </div>
+    </div>
 </div>
+<footer class="container-fluid">
+  <p>Footer Text</p>
+</footer>
 </body>
 </html>
