--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,11 @@
 {% extends "main.html" %}
 {% block content %}
 
-  <div class="container-fluid">
-    <h2 align="center">Sign Up</h2>
-	<form method="post" role="form">
 
+  <div class="container-fluid">
+    <h2 align="center">Login</h2>
+	<form method="post" role="form">
+    <label style="color:red">{{error}}</label>
     <div class="form-group">
     <label for="username">User Name:</label>
     <input type="text" class="form-control" id="username" placeholder="Enter Username" name="username">
@@ -15,19 +16,11 @@
     <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
     <label style="color:red">{{ pw_error }}</label>
   </div>
-  <div class="form-group">
-    <label for="verify_pwd">Verify Password:</label>
-    <input type="password" class="form-control" id="verify_pwd" placeholder="Re-enter password" name="verify_password">
-      <label style="color:red">{{verify_pw_error}}</label>
-  </div>
-    <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-      <label style="color:red">{{email_error}}</label>
-    </div>
     <button class="btn btn-primary" type="submit">Submit</button>
     <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
 	</form>
+    <hr>
+    <p>Click <a href="/blog/signup">here</a> to sign up</p>
 </div>
 
 {% endblock %}
