--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -33,11 +33,12 @@ background-color: #fafafa
 }
 
 p {
-    white-space: pre-line;;
+    white-space: pre-line;
 }
 
 .navbar {
     border-radius:0px;
+    margin-bottom:0px;
 }
 
 .navbar-inverse {
@@ -46,9 +47,15 @@ p {
 }
 
 .navbar-inverse .navbar-brand {
-    color: black;
+    color: white;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    color: black;
+    color: white;
+}
+
+footer{
+    background-color: #2496EE;
+    border-color: #2496EE;
+    color: white;
 }
