--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,26 +1,100 @@
 {% extends "main.html" %}
 {% block content %}
 
+<!--{% if user %}-->
+  <!--<nav class="navbar navbar-inverse">-->
+    <!--<div class="container-fluid">-->
+      <!--<div class="navbar-header">-->
+        <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">-->
+          <!--<span class="icon-bar"></span>-->
+          <!--<span class="icon-bar"></span>-->
+          <!--<span class="icon-bar"></span>-->
+        <!--</button>-->
+        <!--<a class="navbar-brand" href="/">Back of a Length</a>-->
+      <!--</div>-->
+      <!--<div class="collapse navbar-collapse" id="myNavbar">-->
+        <!--<ul class="nav navbar-nav navbar-right">-->
+          <!--<li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>-->
+        <!--</ul>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</nav>-->
 
-  <div class="container-fluid">
-    <h2 align="center">Login</h2>
-	<form method="post" role="form">
-    <label style="color:red">{{error}}</label>
-    <div class="form-group">
-    <label for="username">User Name:</label>
-    <input type="text" class="form-control" id="username" placeholder="Enter Username" name="username">
-        <label style="color:red">{{username_error}}</label>
+    <!--<div class="container-fluid">-->
+    <!--<div class="row content">-->
+      <!--<div class="col-sm-3 sidenav">-->
+        <!--<ul class="nav nav-pills nav-stacked">-->
+          <!--<li><a href="/">All posts</a></li>-->
+          <!--<li><a href="/newpost">Add new post</a></li>-->
+        <!--</ul><br>-->
+        <!--<div class="input-group">-->
+        <!--<input type="text" class="form-control" placeholder="Search Blog..">-->
+        <!--<span class="input-group-btn">-->
+          <!--<button class="btn btn-default" type="button">-->
+            <!--<span class="glyphicon glyphicon-search"></span>-->
+          <!--</button>-->
+        <!--</span>-->
+      <!--</div>-->
+      <!--</div>-->
+      <!--{% else %}-->
+      <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Back of a Length</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/login"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+        </ul>
+      </div>
     </div>
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
-    <label style="color:red">{{ pw_error }}</label>
-  </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
-    <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
-	</form>
-    <hr>
-    <p>Click <a href="/blog/signup">here</a> to sign up</p>
-</div>
+  </nav>
 
+    <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="/">All posts</a></li>
+        </ul><br>
+        <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search Blog..">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search"></span>
+          </button>
+        </span>
+      </div>
+      </div>
+
+<!--{% endif %}-->
+
+  <div class="col-sm-9">
+    <div class="container-fluid">
+      <h2 align="center">Login</h2>
+    <form method="post" role="form">
+      <label style="color:red">{{error}}</label>
+      <div class="form-group">
+      <label for="username">User Name:</label>
+      <input type="text" class="form-control" id="username" placeholder="Enter Username" name="username">
+          <label style="color:red">{{username_error}}</label>
+      </div>
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
+      <label style="color:red">{{ pw_error }}</label>
+    </div>
+      <button class="btn btn-primary" type="submit">Submit</button>
+      <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
+    </form>
+      <hr>
+      <p>Click <a href="/blog/signup">here</a> to sign up</p>
+  </div>
+  </div>
+  </div>
+  </div>
 {% endblock %}
