--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -1,7 +1,7 @@
+{% extends "main.html" %}
+{% block content %}
 
-
-{% if user %}
-  <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -13,7 +13,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/"><span class="glyphicon glyphicon-log-out"></span>Log out</a></li>
+          <li><a href="/login"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
         </ul>
       </div>
     </div>
@@ -24,7 +24,6 @@
       <div class="col-sm-3 sidenav">
         <ul class="nav nav-pills nav-stacked">
           <li><a href="/">All posts</a></li>
-          <li><a href="/newpost">Add new post</a></li>
         </ul><br>
         <div class="input-group">
         <input type="text" class="form-control" placeholder="Search Blog..">
@@ -36,13 +35,12 @@
       </div>
       </div>
 
-      <div class="col-sm-9">
-    {% block content %}
-
-    {% endblock %}
-
-      </div>
-      </div>
+  <div class="col-sm-9">
+    <div class="container-fluid">
+      <hr>
+      <h4>You are successfully logged out!</h4>
   </div>
-{% endif %}
-
+  </div>
+  </div>
+  </div>
+{% endblock %}
