--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -1,22 +1,61 @@
 {% extends "main.html" %}
 {% block content %}
 
-<div class="container-fluid">
-    <h2 align="center">Create new post</h2>
-	<form method="post" role="form">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Back of a Length</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <div class="form-group">
-    <label for="title">Title:</label>
-    <input type="text" class="form-control" id="title" placeholder="Enter title..." name="title">
-      <label style="color:red;">{{title_error}}</label>
-    </div>
-    <div class="form-group">
-      <label for="blog">Subject:</label>
-      <textarea rows="13" type="text" class="form-control" id="blog" placeholder="Enter post..." name="blog"></textarea>
-      <label style="color:red;">{{post_error}}</label>
-    </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
-    <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
-	</form>
-</div>
+    <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav">
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="/">All posts</a></li>
+        </ul><br>
+        <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search Blog..">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search"></span>
+          </button>
+        </span>
+      </div>
+      </div>
+
+      <div class="col-sm-9">
+      <div class="container-fluid">
+          <h2 align="center">Create new post</h2>
+        <form method="post" role="form">
+
+          <div class="form-group">
+          <label for="title">Title:</label>
+          <input type="text" class="form-control" id="title" placeholder="Enter title..." name="title">
+            <label style="color:red;">{{title_error}}</label>
+          </div>
+          <div class="form-group">
+            <label for="blog">Subject:</label>
+            <textarea rows="13" type="text" class="form-control" id="blog" placeholder="Enter post..." name="blog"></textarea>
+            <label style="color:red;">{{post_error}}</label>
+          </div>
+          <button class="btn btn-primary" type="submit">Submit</button>
+          <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
+        </form>
+      </div>
+        </div>
+      </div>
+      </div>
+
 {% endblock %}
