removed search blog input

--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -27,14 +27,14 @@
           <li><a href="/">All posts</a></li>
           <li><a href="/newpost">Add new post</a></li>
         </ul><br>
-        <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search Blog..">
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
-            <span class="glyphicon glyphicon-search"></span>
-          </button>
-        </span>
-      </div>
+        <!--<div class="input-group">-->
+        <!--<input type="text" class="form-control" placeholder="Search Blog..">-->
+        <!--<span class="input-group-btn">-->
+          <!--<button class="btn btn-default" type="button">-->
+            <!--<span class="glyphicon glyphicon-search"></span>-->
+          <!--</button>-->
+        <!--</span>-->
+      <!--</div>-->
       </div>
       {% else %}
       <nav class="navbar navbar-inverse">
