--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -25,14 +25,14 @@
         <ul class="nav nav-pills nav-stacked">
           <li><a href="/">All posts</a></li>
         </ul><br>
-        <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search Blog..">
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
-            <span class="glyphicon glyphicon-search"></span>
-          </button>
-        </span>
-      </div>
+        <!--<div class="input-group">-->
+        <!--<input type="text" class="form-control" placeholder="Search Blog..">-->
+        <!--<span class="input-group-btn">-->
+          <!--<button class="btn btn-default" type="button">-->
+            <!--<span class="glyphicon glyphicon-search"></span>-->
+          <!--</button>-->
+        <!--</span>-->
+      <!--</div>-->
       </div>
 
   <div class="col-sm-9">
