--- a/app/templates/permalink.html
+++ b/app/templates/permalink.html
@@ -1,13 +1,57 @@
 {% extends "main.html" %}
 {% block content %}
 
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Back of a Length</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <div class="container-fluid">
-          <h2>{{blog.title}}</h2>
-          <hr>
-          <p>{{blog.blog}}</p>
-          <div class="text-right"><i>{{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</i></div>
-    <br>
-    <a href="/"><button type="submit" class="btn btn-primary">See all posts</button></a>
-</div>
+    <div class="row content">
+      <div class="col-sm-3 sidenav">
+        <ul class="nav nav-pills nav-stacked">
+          {% if user %}
+          <li><a href="/newpost">Add new post</a></li>
+          {% else %}
+          <li><a href="/">All posts</a></li>
+          {% endif %}
+        </ul><br>
+        <!--<div class="input-group">-->
+        <!--<input type="text" class="form-control" placeholder="Search Blog..">-->
+        <!--<span class="input-group-btn">-->
+          <!--<button class="btn btn-default" type="button">-->
+            <!--<span class="glyphicon glyphicon-search"></span>-->
+          <!--</button>-->
+        <!--</span>-->
+      <!--</div>-->
+      </div>
+      <div class="col-sm-9">
+            <h4><small>RECENT POSTS</small></h4>
+            <hr>
+            <div class="well">
+              <h2>{{blog.title}}</h2>
+              <a href="#">Edit</a> | <a href="#">Delete</a>
+              <hr>
+              <h5><span class="glyphicon glyphicon-time"></span> Post on {{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</h5>
+              <h5><span class="label label-danger"></span><span class="label label-primary"></span></h5><br>
+              <p>{{blog.blog}}</p>
+              <br><br>
+               </div>
+      </div>
+      </div>
+      </div>
 
 {% endblock %}
