--- a/app/templates/editpost.html
+++ b/app/templates/editpost.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 
-      <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -13,7 +13,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/login"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
       </div>
     </div>
@@ -35,28 +35,27 @@
       <!--</div>-->
       </div>
 
-  <div class="col-sm-9">
-    <div class="container-fluid">
-      <h2 align="center">Login</h2>
-    <form method="post" role="form">
-      <label style="color:red">{{error}}</label>
-      <div class="form-group">
-      <label for="username">User Name:</label>
-      <input type="text" class="form-control" id="username" placeholder="Enter Username" name="username">
-          <label style="color:red">{{username_error}}</label>
+      <div class="col-sm-9">
+      <div class="container-fluid">
+          <h2 align="center">Edit post</h2>
+        <form method="post" role="form">
+
+          <div class="form-group">
+          <label for="title">Title:</label>
+          <input type="text" class="form-control" id="title" name="title" value="{{blog.title}}">
+            <label style="color:red;">{{title_error}}</label>
+          </div>
+          <div class="form-group">
+            <label for="blog">Subject:</label>
+            <textarea rows="13" type="text" class="form-control" id="blog" name="blog" value="{{blog.blog}}"></textarea>
+            <label style="color:red;">{{post_error}}</label>
+          </div>
+          <button class="btn btn-primary" type="submit">Submit</button>
+          <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
+        </form>
       </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
-      <label style="color:red">{{ pw_error }}</label>
-    </div>
-      <button class="btn btn-primary" type="submit">Submit</button>
-      <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
-    </form>
-      <hr>
-      <p>Click <a href="/blog/signup">here</a> to sign up</p>
-  </div>
-  </div>
-  </div>
-  </div>
+        </div>
+      </div>
+      </div>
+
 {% endblock %}
