--- a/app/templates/editpost.html
+++ b/app/templates/editpost.html
@@ -25,21 +25,12 @@
         <ul class="nav nav-pills nav-stacked">
           <li><a href="/">All posts</a></li>
         </ul><br>
-        <!--<div class="input-group">-->
-        <!--<input type="text" class="form-control" placeholder="Search Blog..">-->
-        <!--<span class="input-group-btn">-->
-          <!--<button class="btn btn-default" type="button">-->
-            <!--<span class="glyphicon glyphicon-search"></span>-->
-          <!--</button>-->
-        <!--</span>-->
-      <!--</div>-->
       </div>
 
       <div class="col-sm-9">
       <div class="container-fluid">
           <h2 align="center">Edit post</h2>
         <form method="post" role="form">
-
           <div class="form-group">
           <label for="title">Title:</label>
           <input type="text" class="form-control" id="title" name="title" value="{{blog.title}}">
@@ -47,7 +38,7 @@
           </div>
           <div class="form-group">
             <label for="blog">Subject:</label>
-            <textarea rows="13" type="text" class="form-control" id="blog" name="blog" value="{{blog.blog}}"></textarea>
+            <textarea rows="13" type="text" class="form-control" id="blog" name="blog">{{blog.blog}}</textarea>
             <label style="color:red;">{{post_error}}</label>
           </div>
           <button class="btn btn-primary" type="submit">Submit</button>
