--- a/app/templates/deletepost.html
+++ b/app/templates/deletepost.html
@@ -35,9 +35,9 @@
       <!--</div>-->
       </div>
       <div class="col-sm-9">
-      <div class="container-fluid">
-        <h2 align="center">Delete Post</h2>
+        <h4><small>DELETE POST</small></h4>
         <hr>
+        <div class="well">
         <form method="post" role="form">
           <h3>Are you sure you want to delete this post?</h3>
           <br/>
@@ -45,7 +45,7 @@
           <button class="btn btn-primary" type="submit">Submit</button>
           <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
         </form>
-      </div>
+          </div>
         </div>
       </div>
       </div>
