--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -13,7 +13,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
         </ul>
       </div>
     </div>
@@ -28,23 +28,17 @@
       </div>
 
       <div class="col-sm-9">
-          <h4><small>EDIT POST</small></h4>
+          <h4><small>COMMENT POST</small></h4>
         <hr>
         <div class="well">
-        <form method="post" role="form">
-          <div class="form-group">
-          <label for="title">Title:</label>
-          <input type="text" class="form-control" id="title" name="title" value="{{blog.title}}">
-            <label style="color:red;">{{title_error}}</label>
-          </div>
-          <div class="form-group">
-            <label for="blog">Subject:</label>
-            <textarea rows="13" type="text" class="form-control" id="blog" name="blog">{{blog.blog}}</textarea>
-            <label style="color:red;">{{post_error}}</label>
-          </div>
-          <button class="btn btn-primary" type="submit">Submit</button>
-          <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
-        </form>
+          <h4>Leave a Comment:</h4>
+                <form role="form" method="post">
+                  <div class="form-group">
+                    <textarea class="form-control" rows="3" required name="comment"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+                <br><br>
           </div>
       </div>
         </div>
