--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -36,8 +36,10 @@
       </div>
 
       <div class="col-sm-9">
-      <div class="container-fluid">
-          <h2 align="center">Create new post</h2>
+
+          <h4><small>CREATE NEW POST</small></h4>
+        <hr>
+        <div class="well">
         <form method="post" role="form">
 
           <div class="form-group">
