fixed comment feature

--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -31,6 +31,7 @@
           <h4><small>COMMENT POST</small></h4>
         <hr>
         <div class="well">
+          <p><b>Post Title</b> : {{blog.title}}</p><br/>
           <h4>Leave a Comment:</h4>
                 <form role="form" method="post">
                   <div class="form-group">
