--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -42,14 +42,16 @@
             {% for blog in blogs %}
             <div class="well">
               <h2>{{blog.title}}</h2>
-              {% if user %}
-              <a href="/editpost/{{blog.key.id()}}">Edit</a> | <a href="/deletepost/{{blog.key.id()}}">Delete</a>
-              {% else %}
-              {% set id = blog.key.id() %}
-              <a href="/comment/{{id}}">Comment</a>
+              {% if user.name %}
+                {% if blog.user.get().name == user.name %}
+                  <a href="/editpost/{{blog.key.id()}}">Edit</a> | <a href="/deletepost/{{blog.key.id()}}">Delete</a>
+                | <a href="/comment/{{blog.key.id()}}">Comment</a>
+                {% else %}
+                <a href="/comment/{{blog.key.id()}}">Comment</a>
+                {% endif %}
               {% endif %}
               <hr>
-              <h5><span class="glyphicon glyphicon-time"></span> Post on {{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</h5>
+              <h5><span class="glyphicon glyphicon-time"></span> Posted by {{blog.user.get().name}} on {{blog.dateTime.strftime('%B-%d-%Y at %I:%M:%S')}}</h5>
               <h5><span class="label label-danger"></span><span class="label label-primary"></span></h5><br>
               <p>{{blog.blog}}</p>
               <br><br>
@@ -76,17 +78,24 @@
                 <!--</form>-->
                 <!--<br><br>-->
               <!--{% endif %}-->
-              <p><span class="badge">1</span> Comments:</p><br>
-              <div class="row">
-                <div class="col-sm-2 text-center">
-                  <!--<img src="bandmember.jpg" class="img-circle" height="65" width="65" alt="Avatar">-->
+              <p><span class="badge"></span> Comments:</p><hr>
+              {% for comment in blog.comments %}
+              {% if blog.comments %}
+                <div class="row">
+                  <!--<div class="col-sm-2 text-center">-->
+                    <!--<img src="bandmember.jpg" class="img-circle" height="65" width="65" alt="Avatar">-->
+                  <!--</div>-->
+                  <div class="col-sm-10">
+                    <h4><small>Commented by </small>{{comment.get().user.get().name}}
+                      <small>on {{comment.get().postedOn.strftime('%B-%d-%Y at %I:%M:%S')}}</small>
+                    </h4>
+                    <p>{{comment.get().comment}}</p>
+                    <br/>
+                  </div>
                 </div>
-                <div class="col-sm-10">
-                  <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
-                  <p>{{blog.comments}}</p>
-                  <br/>
-                </div>
-              </div>
+              {% endif %}
+                {% endfor %}
+
               </div>
             {% endfor %}
           {% else %}
