--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -63,6 +63,8 @@
       <button class="btn btn-primary" type="submit">Submit</button>
       <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
     </form>
+            <hr>
+      <p>Click <a href="/login">here</a> to login</p>
   </div>
   </div>
   </div>
