added like feature to blog.html

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -66,6 +66,10 @@ footer{
     background: transparent;
 }
 
-.like, .dislike {
+.like {
     display: inline-block;
+}
+
+#like {
+    background-color: #fafafa
 }
