--- a/app/templates/deletecomment.html
+++ b/app/templates/deletecomment.html
@@ -13,7 +13,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
       </div>
     </div>
@@ -28,18 +28,17 @@
       </div>
 
       <div class="col-sm-9">
-          <h4><small>COMMENT POST</small></h4>
+      <div class="col-sm-9">
+        <h4><small>DELETE Comment</small></h4>
         <hr>
         <div class="well">
-          <p><b>Post Title</b> : {{blog.title}}</p><br/>
-          <h4>Leave a Comment:</h4>
-                <form role="form" method="post">
-                  <div class="form-group">
-                    <textarea class="form-control" rows="3" required name="comment"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-success">Submit</button>
-                  <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
-                </form>
+        <form method="post" role="form">
+          <h3>Are you sure you want to delete this comment?</h3>
+          <br/>
+          <p>{{comment.comment}}</p><br/>
+          <button class="btn btn-primary" type="submit">Submit</button>
+          <a onclick="window.location='/'; return false;"><button type="cancel" class="btn btn-danger">Cancel</button></a>
+        </form>
                 <br><br>
           </div>
       </div>
