added like feature

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -71,5 +71,14 @@ footer{
 }
 
 #like {
-    background-color: #fafafa
+    background-color: #2496EE;
+    color: whitesmoke;
+}
+
+#postlike{
+display: inline-flex;
+}
+
+.likes{
+padding: 5px 10px;
 }
