--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -8,13 +8,19 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="static/js/script.js"></script>
   <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
       {% block content %}
       {% endblock %}
+            <div class="col-sm-3 sidenav">
+        <h4><small>Latest news</small></h4>
+        <ul id="sport" class="nav nav-pills nav-stacked"></ul>
+    </div>
+    </div>
 <footer class="container-fluid">
-  <p>Footer Text</p>
+  <p></p>
 </footer>
 </body>
 </html>
