--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,5 +1,5 @@
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 1500px}
+    .row.content {min-height: 1000px}
 
     /* Set gray background color and 100% height */
     .sidenav {
@@ -24,7 +24,7 @@
     }
 
 body {
-background-color: #fafafa
+    background-color: #f1f1f1;
 }
 
 .well {
@@ -81,4 +81,22 @@ display: inline-flex;
 
 .likes{
 padding: 5px 10px;
+}
+
+.article{
+    background-color: #fff;
+    min-height: 20px;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+
+.nav > li > a:focus, .nav > li > a:hover {
+    background-color: #fff;
+}
+
+.col-sm-7{
+    padding-right: 0px;
+    padding-left: 0px;
 }
