--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,23 +21,16 @@
 
     <div class="container-fluid">
     <div class="row content">
-      <div class="col-sm-3 sidenav">
+      <div class="col-sm-2 sidenav">
         <ul class="nav nav-pills nav-stacked">
           <li><a href="/">All posts</a></li>
         </ul><br>
-        <!--<div class="input-group">-->
-        <!--<input type="text" class="form-control" placeholder="Search Blog..">-->
-        <!--<span class="input-group-btn">-->
-          <!--<button class="btn btn-default" type="button">-->
-            <!--<span class="glyphicon glyphicon-search"></span>-->
-          <!--</button>-->
-        <!--</span>-->
-      <!--</div>-->
       </div>
 
-  <div class="col-sm-9">
+  <div class="col-sm-7">
     <div class="container-fluid">
       <h2 align="center">Login</h2>
+      <div class="well">
     <form method="post" role="form">
       <label style="color:red">{{error}}</label>
       <div class="form-group">
@@ -56,7 +49,6 @@
       <hr>
       <p>Click <a href="/blog/signup">here</a> to sign up</p>
   </div>
-  </div>
-  </div>
+      </div>
   </div>
 {% endblock %}
