some html changes

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -29,7 +29,7 @@
 
   <div class="col-sm-7">
     <div class="container-fluid">
-      <h2 align="center">Login</h2>
+      <h4><small>LOGIN</small></h4>
       <div class="well">
     <form method="post" role="form">
       <label style="color:red">{{error}}</label>
