--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -19,8 +19,9 @@
         <ul id="sport" class="nav nav-pills nav-stacked"></ul>
     </div>
     </div>
+      </div>
 <footer class="container-fluid">
-  <p></p>
+  <p>Developed by Manpreet Singh</p>
 </footer>
 </body>
 </html>
