--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -29,7 +29,7 @@
 
   <div class="col-sm-7">
     <div class="container-fluid">
-      <h2 align="center">Sign Up</h2>
+      <h4><small>SIGN UP</small></h4>
       <div class="well">
     <form method="post" role="form">
 
